fixed tablet mode, need to center section 2 on mobile and tab

--- a/style.css
+++ b/style.css
@@ -1,112 +1,144 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* media for nav bar  */
-@media screen and (min-width:992px){
-    .nav-item {
-    line-height:80px;
-    }
+@media screen and (min-width: 992px) {
+  .nav-item {
+    line-height: 80px;
   }
+}
 
-  /* mobil style  */
-  main {
-    max-width: 4000px;
-  }
-  .section-1 {
-    width: 100%;
-    height: 90dvh;
-    /* background-color: rgba(128, 128, 128, 0.377); */
+.navbar-toggler:hover,
+.navbar-toggler:focus {
+  /* outline: none; */
+  box-shadow: none;
+}
+
+/* mobil style  */
+main {
+  max-width: 4000px;
+}
+.section-1 {
+  width: 100%;
+  height: 90dvh;
+  /* background-color: rgba(128, 128, 128, 0.377); */
 }
 .hero {
-    background-image: url('./images/hero.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 50%;
-    /* width: 200px; */
+  background-image: url("./images/hero.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 50%;
+  /* width: 200px; */
 }
 
 .hero-text-container {
-      padding: 0 1rem;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* background-color: red; */
-  }
-
-  .hero-text-container .btn {
-    width: 10rem;
-  }
-
-
-  .section-2 {
-    padding: 3rem 0;
-    position: relative;
-    height: 80dvh;
-    display: flex;
-
+  padding: 0 1rem;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* background-color: red; */
 }
-.section-2  h2{
-    text-align: center;
+
+.hero-text-container .btn {
+  width: 10rem;
+}
+
+.section-2 {
+  padding: 3rem 0;
+  position: relative;
+  height: 80dvh;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+}
+.section-2 h2 {
+  text-align: center;
 }
 .services-wrapper {
-    background-color: rgba(245, 245, 245, 0.474);
-    /* text-align: center; */
+  background-color: rgba(245, 245, 245, 0.474);
+  background-color: yellow;
+  /* text-align: center; */
 }
-  .service {
-    height: 10rem;
-    /* outline: 2px solid green; */
-  }
+.services-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: red;
+}
+.service {
+  height: 10rem;
+  outline: 2px solid green;
+}
 
-  /* tablet and pc  */
-  @media screen and (min-width: 700px){
-    .section-1 {
-        background-image: url('./images/hero.jpg');
+/* tablet view   */
+@media screen and (min-width: 700px) {
+
+    .hero {
+      background-image: none;
+      /* width: 200px; */
+    }
+
+      .section-1 {
+        background-image: url("./images/hero.jpg");
         background-repeat: no-repeat;
         background-size: cover;
-        background-attachment: fixed;
+        background-position-x: center;
+        /* background-attachment: fixed; */
         width: 100%;
         padding: 0 5rem;
-    }
-    .hero {
-        background-image: none;
-        /* width: 200px; */
+        /* background-color: red; */
       }
+}
 
-      .hero-text-container {
-        position: relative;
-        top: 5rem;
-    }
 
-/* 
+/*  pc  */
+@media screen and (min-width: 1000px) {
+  .section-1 {
+    background-image: url("./images/hero.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    padding: 0 5rem;
+  }
+  .hero {
+    background-image: none;
+    /* width: 200px; */
+  }
+
+  .hero-text-container {
+    position: relative;
+    top: 5rem;
+  }
+
+  /* 
     .section-2 {
  
     } */
-    .services-wrapper {
-        position: absolute;
-        width: 70%;
-    }
-    .service {
-        height: 12rem;
-   
-      }
-    .section-2-bg-image{
-        /* background-color: green; */
-        background-image: url('./images/dentist.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        background-position-x: top;
-        height: 30rem;
-        width: 80%;
-        z-index: -1;
-        position: absolute;
-        top: 10rem;
-        right: -6%;
-    }
-    
+  .services-wrapper {
+    position: absolute;
+    width: 70%;
   }
+  .service {
+    height: 12rem;
+  }
+  .section-2-bg-image {
+    /* background-color: green; */
+    background-image: url("./images/dentist.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position-x: top;
+    height: 30rem;
+    width: 80%;
+    z-index: -1;
+    position: absolute;
+    top: 10rem;
+    right: -6%;
+  }
+}
